@@ -3,56 +3,72 @@ package visitor;
 import calculator.Expression;
 import calculator.MyNumber;
 import calculator.Operation;
-import calculator.values.IntegerValue;
+import calculator.UnaryOperation;
 import calculator.values.NumericValue;
 
 import java.util.ArrayList;
 
-/** Evaluation is a concrete visitor that serves to
+/**
+ * Evaluation is a concrete visitor that serves to
  * compute and evaluate the results of arithmetic expressions.
  */
 public class Evaluator extends Visitor {
 
     /**
-     * Default constructor of the class. Does not initialise anything.
+     * Default constructor of the class. Does not initialize anything.
      */
     public Evaluator() {}
 
-    /** The result of the evaluation will be stored in this private variable */
+    /**
+     * The result of the evaluation will be stored in this private variable.
+     */
     private NumericValue computedValue;
 
-    /** getter method to obtain the result of the evaluation
+    /**
+     * Getter method to obtain the result of the evaluation.
      *
-     * @return an Integer object containing the result of the evaluation
+     * @return a NumericValue object containing the result of the evaluation.
      */
-    public NumericValue getResult() { return computedValue; }
+    public NumericValue getResult() {
+        return computedValue;
+    }
 
-    /** Use the visitor design pattern to visit a number.
+    /**
+     * Use the visitor design pattern to visit a number.
      *
-     * @param n The number being visited
+     * @param n The number being visited.
      */
+    @Override
     public void visit(MyNumber n) {
+        // On récupère directement la valeur contenue dans MyNumber (de type NumericValue)
         computedValue = n.getValue();
     }
 
-    /** Use the visitor design pattern to visit an operation
+    /**
+     * Use the visitor design pattern to visit an operation.
      *
-     * @param o The operation being visited
+     * @param o The operation being visited.
      */
+    @Override
     public void visit(Operation o) {
         ArrayList<NumericValue> evaluatedArgs = new ArrayList<>();
-        //first loop to recursively evaluate each subexpression
-        for(Expression a:o.args) {
+        // 1) Evaluate each sub‐expression
+        for (Expression a : o.getArgs()) {
             a.accept(this);
             evaluatedArgs.add(computedValue);
         }
-        //second loop to accumulate all the evaluated subresults
-        NumericValue temp = evaluatedArgs.get(0);
-        int max = evaluatedArgs.size();
+
+        // 2) If it's a unary operation, invoke its single‐arg op(val)
+        if (o instanceof UnaryOperation unaryOp && evaluatedArgs.size() == 1) {
+            computedValue = unaryOp.op(evaluatedArgs.getFirst());
+            return;
+        }
+
+        // 3) Otherwise fold all args through the binary op(l,r)
+        NumericValue temp = evaluatedArgs.getFirst();
         for (int i = 1; i < evaluatedArgs.size(); i++) {
             temp = o.op(temp, evaluatedArgs.get(i));
         }
-        // store the accumulated result
         computedValue = temp;
     }
 
